--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "antd": "^5.2.0",
     "axios": "^1.3.2",
-    "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
