--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
-    "sass": "^1.58.0"
+    "sass": "^1.58.0",
+    "uid": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
