--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,15 @@
     "@reduxjs/toolkit": "^1.9.2",
     "antd": "^5.2.0",
     "axios": "^1.3.2",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "sass": "^1.58.0",
-    "uid": "^2.0.1"
+    "uid": "^2.0.1",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
